mobile overflow issue fix

--- a/wp-content/themes/beaverwarrior/components/GridTeam/GridTeam.less
+++ b/wp-content/themes/beaverwarrior/components/GridTeam/GridTeam.less
@@ -30,8 +30,6 @@
 	}
 
 	&-team_member {
-		display: flex;
-		justify-content: center;
 		.GridTeam-member_wrapper {
 			padding: 0 56px;
 			@media screen and (max-width: 1024px){
@@ -39,8 +37,6 @@
 			}
 			@media screen and (max-width: 993px){
 					padding: 0 141px;
-					display: flex;
-					justify-content: center;
 			}
 		}
 		@media screen and (max-width: 992px){
